# agent-factory

./: .env.example  .gitignore  Agent.MD  Alexander Gembar. PAR Stories Analysis.md  README.md  pyproject.toml  run.sh
config/: mcp_servers.yaml
core/: __init__.py  agent.py  cli.py  dev_tools.py  errors.py  factory.py  tool_registry.py
core/models/: __init__.py  anthropic_adapter.py  base.py  ollama_adapter.py
docs/: DEVELOPMENT_GUIDE.md  FACTORY_GUIDE.md
mcp/: __init__.py
memory/: __init__.py  episodic.py  long_term.py  manager.py  short_term.py  tools.py
rag/: __init__.py  tools.py
rag/embeddings/: __init__.py  embedding_router.py
rag/ingestion/: __init__.py  chunker.py  loaders.py  pipeline.py
rag/retrieval/: __init__.py  query_engine.py
rag/store/: __init__.py  chroma_store.py
router/: __init__.py  cost_router.py  strategies.py
skills/: __init__.py  base.py  executor.py  loader.py  tools.py
skills/builtin/: __init__.py
skills/builtin/project_planner/: SKILL.md  __init__.py  skill.py
tracing/: __init__.py  models.py  store.py  tracer.py
workflows/: __init__.py  engine.py  executor.py  models.py  tools.py
